--- a/maket/index.html
+++ b/maket/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>2_services</title>
+	<title>CPS Serivces</title>
 	<link rel="stylesheet" type="text/css" href="/reset.css">
 	<link rel="stylesheet" type="text/css" href="/public/styles/style.css">
 </head>
