--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>2_services</title>
 	<link rel="stylesheet" type="text/css" href="/reset.css">
-	<link rel="stylesheet" type="text/css" href="/public/styles/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<header>
